docs: fix blur lag on safari

--- a/website/styles/global.css
+++ b/website/styles/global.css
@@ -59,3 +59,7 @@ html[class~='dark'] .gradient-text {
 .fix-safari-tilt {
   -webkit-transform: translateZ(0);
 }
+
+.fix-safari-blur {
+  transform: translate3d(0, 0, 0);
+}
